Issue 120386 : fixing FINDBUGS warnings